2.19 2018-03-28
~~~~~~~~~~~~~~~

* Added support for netCDF CDF-5 (NC_64BIT_DATA).

* Fixed issue where filename() expression would provide full filename path
  on Windows (instead of just the filename). This impacted product type
  detection on Windows when the detection expression was using the filename.

* Fixed issue reading variable length strings from a scalar dataset in HDF5.

* Added support for empty string attributes in HDF5 (i.e. using H5S_NULL).

* Allow min() and max() coda expression functions to work on arrays and on
  (arrays of) string values.

2.18.3 2017-09-22
~~~~~~~~~~~~~~~~~

* The CODA Python interface now automatically sets a default CODA_DEFINITION
  path relative to the CODA Python package.

* Fixed memory leak in HDF5 backend.

* Allow fixed length array dimension definitions for XML formatted products.

2.18.2 2017-06-20
~~~~~~~~~~~~~~~~~

* Added automatic scale_factor/add_offset/missing_value/_FillValue conversion
  for HDF5 (similar to what was already done for netcdf and HDF4).

* Leading and trailing whitespace that is allowed when parsing numerical
  values from ascii data can now consist of either space or a tab characters
  (instead of just space characters).

* Improved reading performance of GRIB messages that use 'simple packing'.

2.18.1 2017-03-23
~~~~~~~~~~~~~~~~~

* Fixed issue with reading of XML files using a codadef definition when mmap
  is disabled.

* Fixed issue where asciiline length of last line was 1 byte too short if
  line did not end with an end-of-line.

* Improved Python coda.fetch() performance.

2.18 2017-01-20
~~~~~~~~~~~~~~~

* Changed Open Source licence of CODA from GPLv2 to BSD (3-Clause).

* Added support for using path references as a parameter to the CODA fetch()
  functions in the Python, Matlab, and IDL interfaces. You can now do things
  like 'coda_fetch(pf, "dataset[0]/variable@unit")'.

* CODA now supports GRIB files that contain a mix of GRIB1 and GRIB2 messages.