@@ -17,6 +17,7 @@ include(CheckLibraryExists)
 include(CheckIncludeFile)
 include(CheckSymbolExists)
 include(CheckTypeSize)
+include(CheckCSourceCompiles)
 include(TestBigEndian)
 include(CMakeDependentOption)
 
@@ -189,6 +190,26 @@ check_type_size(long SIZEOF_LONG)
 check_type_size(short SIZEOF_SHORT)
 
 test_big_endian(WORDS_BIGENDIAN)
+
+# Check for thread-local storage (TLS) keyword
+if(NOT DEFINED THREAD_LOCAL)
+  message(STATUS "Check for thread local keyword")
+  foreach(keyword IN ITEMS "thread_local" "_Thread_local" "__thread" "__declspec(thread)")
+    set(CMAKE_REQUIRED_QUIET True)
+    check_c_source_compiles("int main(void) { static ${keyword} int bar; return 0; }" Thread_Local_Keyword)
+    if(${Thread_Local_Keyword})
+      unset(Thread_Local_Keyword CACHE)
+      set(THREAD_LOCAL ${keyword} CACHE STRING "Thread-local storage (TLS) keyword")
+      message(STATUS "Check for thread local keyword - ${keyword}")
+      break()
+    endif()
+    unset(Thread_Local_Keyword CACHE)
+  endforeach()
+  if(NOT DEFINED THREAD_LOCAL)
+    message(STATUS "Check for thread local keyword - not found")
+    set(THREAD_LOCAL "" CACHE STRING "Thread-local storage (TLS) keyword")
+  endif()
+endif()
 
 if(HAVE_STDLIB_H AND HAVE_STDDEF_H)
   set(STDC_HEADERS 1)
