@@ -143,14 +143,15 @@
  * \ingroup coda_types
  */
 
-static coda_type_record *empty_record_singleton[] =
+static THREAD_LOCAL coda_type_record *empty_record_singleton[] =
     { NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL };
 
 #define num_empty_record_singletons ((int)(sizeof(empty_record_singleton)/sizeof(empty_record_singleton[0])))
 
-static coda_type_raw *raw_file_singleton = NULL;
+static THREAD_LOCAL coda_type_raw *raw_file_singleton = NULL;
 
-static coda_type_special *no_data_singleton[] = { NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL };
+static THREAD_LOCAL coda_type_special *no_data_singleton[] =
+    { NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL };
 
 #define num_no_data_singletons ((int)(sizeof(no_data_singleton)/sizeof(no_data_singleton[0])))
 
